@@ -1,3 +1,10 @@
+2005-12-07  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* UnixMarshalTest.cs: Make test public so that it's actually executed by
+	  NUnit; NUnit doesn't like private Test* methods -- rename; test
+	  UnixMarshal.PtrToString for a string containing 0 characters (this used to
+	  cause an ArgumentOutOfRangeException due to a bug).
+
 2005-12-05  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UnixUserTest.cs: s/UnixUser/UnixUserInfo/g (UnixUser is obsolete).
